# jellyclaw

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
jellyclaw/: __init__.py  __main__.py  cli.py
jellyclaw/agents/: base.py  ceo.py  department_head.py  orchestrator.py  worker.py
jellyclaw/channels/: base.py  factory.py  local_dashboard_adapter.py  telegram_adapter.py
jellyclaw/config/: loader.py  schema.py
jellyclaw/daemon/: launchd.py  systemd.py
jellyclaw/dashboard/: server.py
jellyclaw/dashboard/static/: index.html
jellyclaw/llm/: claude_client.py  ollama_client.py
jellyclaw/storage/: db.py  models.py
jellyclaw/templates/: dev-team.yaml  sales-office.yaml
jellyclaw/tools/: __init__.py  registry.py
jellyclaw/tools/builtin/: file_ops.py  shell.py
tests/: test_channel_factory.py  test_config_schema.py  test_ollama_client.py  test_orchestrator.py
