[project]
name = "jellyclaw"
version = "0.1.0"
description = "Your own AI company: a local hierarchy of AI agents (CEO -> department heads -> workers) running on Ollama, configured with one YAML file."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "JellyClaw" }]
keywords = ["agents", "ollama", "llm", "orchestration", "multi-agent"]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "ollama>=0.4",
    "python-telegram-bot>=21.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40",
]

[project.urls]
Homepage = "https://jellyclaw.in"
Repository = "https://github.com/JellyClaw-org/jellyclaw"

[project.scripts]
jellyclaw = "jellyclaw.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jellyclaw"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
